--- a/style.css
+++ b/style.css
@@ -63,10 +63,11 @@ header a:hover{
 
 /* showcase */
 #showcase{
-    background: url('images/nature.jpg') no-repeat  0 -100px ;
+    background: url('images/nature.jpg') no-repeat   ;
     min-height: 400px;
     text-align: center;
     color: white;
+    
 }
 #showcase h1{
     margin-top: 100px;
@@ -129,6 +130,12 @@ padding: 5px;
 #main-content .box img{
     width: 30%;
 }
+#main-content .box h1{
+    text-align: center;
+    text-transform: uppercase;
+    padding: auto;
+}
+
 #owner{
     text-align: center;
     font-size: 17px;
